--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Better Motherfucking Website</title>
 		<!-- Un peu de style pour commencer -->
-			<style type="text/css">body{margin:40px
-				auto;max-width:650px;line-height:1.6;font-size:18px;color:#444;padding:0
-				10px;background-color:#F0FFF0; text-shadow: 2px 2px white;}
+			<style type="text/css">body{margin:10px
+				auto;max-width:650px;line-height:1.6; padding:0
+				10px; font: italic bold 15px/30px Georgia serif;}
 				h1,h2,h3{line-height:1.2}
-				header{border:outset;border-radius: 8px;background: #D3D3D3;text-align: center;}
+				header{border:double;border-radius: 8px;border-color: white ;background: #32CD32;text-align: center;}
+				header h1 {text-shadow: 2px 2px white;}
 			</style>
 	</head>
 
