--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Better Motherfucking Website</title>
 		<!-- Un peu de style pour commencer -->
-			<style type="text/css">body{margin:10px
-				auto;max-width:650px;line-height:1.6; padding:0
-				10px; font: italic bold 15px/30px Georgia serif;}
-				h1,h2,h3{line-height:1.2}
-				header{border:double;border-radius: 8px;border-color: white ;background: #32CD32;text-align: center;}
-				header h1 {text-shadow: 2px 2px white;}
-			</style>
+		<link rel="stylesheet" type="text/css" href="Better mother.../css.css">	
 	</head>
 
 	<body>
